objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Gold_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Gold Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR_BP_1__c</fullName>
        <label>TR BP 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_BP_2__c</fullName>
        <label>TR BP 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_BP_3__c</fullName>
        <label>TR BP 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>child_field__c</fullName>
        <label>child field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controlling_pick_list__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>four</fullName>
                </value>
                <value>
                    <fullName>five</fullName>
                </value>
                <value>
                    <fullName>six</fullName>
                </value>
                <value>
                    <fullName>seven</fullName>
                </value>
                <value>
                    <fullName>eight</fullName>
                </value>
                <value>
                    <fullName>nine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>controlling_pick_list__c</fullName>
        <label>controlling pick list</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_1__c</fullName>
        <description>description</description>
        <inlineHelpText>help</inlineHelpText>
        <label>test 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_2__c</fullName>
        <label>test 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_3__c</fullName>
        <description>Dummy description version 101</description>
        <inlineHelpText>Testing - updated version</inlineHelpText>
        <label>test 3 upd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_acc_picklist__c</fullName>
        <label>test acc picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>apple</fullName>
                </value>
                <value>
                    <fullName>ball</fullName>
                </value>
                <value>
                    <fullName>cat</fullName>
                    <label>cat_small</label>
                </value>
                <value>
                    <fullName>dog</fullName>
                </value>
                <value>
                    <fullName>elephant_big</fullName>
                </value>
                <value>
                    <fullName>fountain</fullName>
                </value>
                <value>
                    <fullName>garage</fullName>
                </value>
                <value>
                    <fullName>horse</fullName>
                </value>
                <value>
                    <fullName>intelligent</fullName>
                </value>
                <value>
                    <fullName>dog_lab</fullName>
                    <isActive>false</isActive>
                    <label>dog_lab</label>
                </value>
                <value>
                    <fullName>elephant</fullName>
                    <isActive>false</isActive>
                    <label>elephant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_picklist__c</fullName>
        <label>test picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>orange</fullName>
                </value>
                <value>
                    <fullName>jackfruit</fullName>
                </value>
                <value>
                    <fullName>pineapple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cinema_Acc_Val</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(AccountNumber)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account Number cannot be nullified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>test_acc</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(BillingCountry)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Billing Country cannot be blank</errorMessage>
    </validationRules>
</CustomObject>